<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">WhatAndroid</string>
    <string name="app_version_unknown">WhatAndroid</string>
    <string name="login">Login</string>
    <string name="announcements">Announcements</string>
    <string name="blog">Blog</string>
    <string name="profile">Profile</string>
    <string name="inbox">Inbox</string>
    <string name="messages">Messages</string>
    <string name="top10">Top 10</string>
    <string name="notifications">Torrent Notifications</string>
    <string name="subscriptions">Subscriptions</string>
    <string name="new_subscriptions">New Subscriptions!</string>
    <string name="show_all">Show All</string>
    <string name="unsubscribe">Unsubscribe</string>
    <string name="forums">Forums</string>
    <string name="artist">Artist</string>
    <string name="torrent_group">Torrent Group</string>
    <string name="torrents">Torrents</string>
    <string name="users">Users</string>
    <string name="artists">Artists</string>
    <string name="requests">Requests</string>
    <string name="barcode_lookup">Barcode Lookup</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="avatar">Avatar</string>
    <string name="album_art">Album Art</string>
    <string name="header_image">Header Image</string>
    <string name="search">Search</string>
    <string name="search_terms">Search Terms</string>
    <string name="search_tags">Tags (eg: hip.hop indie)</string>
    <string name="logout">Logout</string>
    <string name="refresh">Refresh</string>
    <string name="download">Download</string>
    <string name="send_to_pywa">Send to PyWA</string>
    <string name="download_to_device">Save to device</string>
    <string name="cancel">Cancel</string>
    <string name="stats">Stats</string>
    <string name="snatches">Snatches</string>
    <string name="uploads">Uploads</string>
    <string name="ratio_required">Ratio / Required</string>
    <string name="uploaded">Uploaded</string>
    <string name="downloaded">Downloaded</string>
    <string name="paranoia">Paranoia</string>
    <string name="send_message">Send Message</string>
    <string name="subject">Subject</string>
    <string name="whatandroid_logo">WhatAndroid Logo</string>
    <string name="action_settings">Settings</string>
    <string name="action_send_feedback">Send Feedback</string>
    <string name="created">Created</string>
    <string name="record_label">Record Label</string>
    <string name="catalogue_number">Catalogue Number</string>
    <string name="release_type">Release Type</string>
    <string name="accept_bitrates">Acceptable Bitrates</string>
    <string name="accept_formats">Acceptable Formats</string>
    <string name="accept_media">Acceptable Media</string>
    <string name="votes">Votes</string>
    <string name="vote">Vote</string>
    <string name="bounty">Bounty</string>
    <string name="filled">Filled</string>
    <string name="filled_by">Filled By</string>
    <string name="by">by</string>
    <string name="tags">Tags</string>
    <string name="after_tax">Bounty after tax</string>
    <string name="request">Request</string>
    <string name="delete">Delete</string>
    <string name="load_terms">Load Terms</string>
    <string name="scanned">Scanned</string>
    <string name="add_barcodes">Scan Barcodes</string>
    <string name="delete_all">Delete All</string>
    <string name="preferences">Preferences</string>
    <string name="bookmark">Bookmark</string>
    <string name="bookmarks">Bookmarks</string>
    <string name="remove_bookmark">Remove Bookmark</string>
    <string name="toggle_nofications">Toggle Notifications</string>
    <string name="clear">Clear</string>
    <string name="posts">Posts</string>
    <string name="topics">Topics</string>
    <string name="last_post">Last Post:</string>
    <string name="last_post_by">Last post by</string>
    <string name="author">Author:</string>
    <string name="go_to_last_read">Go to last read</string>
    <string name="last_page">Last Page</string>
    <string name="select_page">Select Page</string>
    <string name="view_poll">View poll</string>
    <string name="sticky_thread">Sticky Thread</string>
    <string name="locked_thread">Locked Thread</string>
    <string name="toggle_subscription">Toggle subscription</string>
    <string name="reply">Reply</string>
    <string name="manage_conversation">Manage Conversation</string>
    <string name="sticky">Sticky</string>
    <string name="mark_unread">Mark as Unread</string>
    <string name="delete_conversation">Delete Conversation</string>
    <string name="compose_hint">Enter your reply here, going back will save the draft automatically.</string>
    <string name="discard">Discard</string>
    <string name="preview">Preview</string>
    <string name="size">Size</string>
    <string name="data_transferred">Data Transferred</string>
    <string name="similar_artists">Similar Artists</string>
    <string name="copy_url">Copy URL</string>
    <string name="new_folder">New folder</string>
    <string name="pref_img_on_wifi_only">Load Images on Wifi Only</string>
    <string name="key_pref_img_wifi">pref_img_wifi_only</string>
    <string name="pref_disable_updater">Disable Periodic Update Checking</string>
    <string name="key_pref_disable_updater">pref_disable_updater</string>
    <string name="pref_updater_description">To force an update check press the version number below</string>
    <string name="pref_pywhat">PyWhat Server</string>
    <string name="pref_pywhat_host">Hostname</string>
    <string name="pref_pywhat_port">Port</string>
    <string name="pref_pywhat_password">Password</string>
    <string name="key_pref_pywhat_host">pref_pywhat_host</string>
    <string name="key_pref_pywhat_port">pref_pywhat_port</string>
    <string name="key_pref_pywhat_password">pref_pywhat_password</string>
    <string name="key_pref_version_name">pref_verion_name</string>
    <string name="key_pref_num_notifications">key_pref_num_notification</string>
    <string name="key_pref_new_subscriptions">key_pref_new_subscriptions</string>
    <string name="key_pref_new_messages">key_pref_new_messages</string>
    <string name="fontawesome_font">fontawesome-webfont.ttf</string>
    <string name="roboto_black">Roboto-Black.ttf</string>
    <string name="switch_layout">Switch Layout</string>
    <string name="pref_light_layout">Use Light Layout for Forums</string>
    <string name="key_pref_light_layout">pref_light_layout</string>
    <string name="pref_light_theme">Use Light Material Theme</string>
    <string name="key_pref_light_theme">pref_light_theme</string>
    <string name="pref_torrent_download_path">Torrent Download Directory</string>
    <string name="pref_torrent_download_path_summary">Optional directory to place downloaded torrents in</string>
    <string name="key_pref_torrent_download_path">pref_torrent_download_path</string>
    <string name="ranks">Ranks</string>
    <string name="overall">Overall</string>
    <string name="artists_added">Artists added</string>
    <string name="posts_made">Posts made</string>
    <string name="bounty_spent">Bounty spent</string>
    <string name="requests_filled">Requests filled</string>
    <string name="torrents_uploaded">Torrents uploaded</string>
    <string name="data_downloaded">Data downloaded</string>
    <string name="data_uploaded">Data uploaded</string>
    <string name="send_to_wm">Send to WM</string>
    <string name="invited">Invited</string>
    <string name="info">Info</string>

    <string-array name="vote_units">
        <item>MB</item>
        <item>GB</item>
    </string-array>
</resources>
