<?xml version="1.0" encoding="utf-8"?>

<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">
    <PreferenceCategory
            android:title="@string/preferences"
            android:key="pref_general">

        <CheckBoxPreference
                android:title="@string/pref_img_on_wifi_only"
                android:key="@string/key_pref_img_wifi"
                android:defaultValue="false"/>

        <CheckBoxPreference
                android:title="@string/pref_disable_updater"
                android:key="@string/key_pref_disable_updater"
                android:summary="@string/pref_updater_description"
                android:defaultValue="false"/>

    </PreferenceCategory>

    <PreferenceCategory
            android:title="@string/pref_pywhat"
            android:key="pref_pywhat">
        <EditTextPreference
                android:title="@string/pref_pywhat_host"
                android:key="@string/key_pref_pywhat_host"
                android:summary="Begins with http:// or https://"
                android:defaultValue=""
                android:inputType="textUri"/>
        <EditTextPreference
                android:title="@string/pref_pywhat_port"
                android:key="@string/key_pref_pywhat_port"
                android:defaultValue=""
                android:inputType="number"/>
        <EditTextPreference
                android:title="@string/pref_pywhat_password"
                android:key="@string/key_pref_pywhat_password"
                android:defaultValue=""
                android:inputType="textPassword"/>
    </PreferenceCategory>

    <PreferenceCategory
            android:title="WhatAndroid Version"
            android:key="pref_version">
        <!-- This is a pretty hacky way of displaying the app version, can we do better? -->
        <Preference
                android:title="@string/app_version"
                android:key="@string/key_pref_version_name"
                android:defaultValue=""/>
    </PreferenceCategory>
</PreferenceScreen>