<?xml version="1.0" encoding="utf-8"?>

<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/action_refresh"
        android:orderInCategory="5"
        android:showAsAction="ifRoom"
        android:title="@string/refresh"
        android:icon="@drawable/ic_action_refresh"/>

    <item
        android:id="@+id/action_pick_last_page"
        android:orderInCategory="15"
        android:showAsAction="never"
        android:title="@string/last_page"/>

    <item
        android:id="@+id/action_pick_page"
        android:orderInCategory="20"
        android:showAsAction="never"
        android:title="@string/select_page"/>

    <item
        android:id="@+id/action_switch_layout"
        android:orderInCategory="25"
        android:showAsAction="never"
        android:title="@string/switch_layout"/>

</menu>