<?xml version="1.0" encoding="utf-8"?>

<menu
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        tools:context=".WhatAndroid">

    <item
            android:id="@+id/action_reply"
            android:icon="@drawable/ic_action_reply"
            android:title="@string/reply"
            android:orderInCategory="0"
            android:showAsAction="ifRoom"/>

    <item
            android:id="@+id/action_subscription"
            android:icon="@drawable/ic_eye_off"
            android:title="@string/toggle_subscription"
            android:orderInCategory="5"
            android:showAsAction="ifRoom"/>

    <!-- There aren't a lot of poll threads so we hide this initially and show if there is a poll -->
    <item
            android:id="@+id/action_view_poll"
            android:icon="@drawable/ic_action_view_poll"
            android:title="@string/view_poll"
            android:orderInCategory="10"
            android:visible="false"
            android:showAsAction="ifRoom"/>

    <item
            android:id="@+id/action_pick_last_page"
            android:title="@string/last_page"
            android:orderInCategory="15"
            android:showAsAction="never"/>

    <item
            android:id="@+id/action_pick_page"
            android:title="@string/select_page"
            android:orderInCategory="20"
            android:showAsAction="never"/>

</menu>