<?xml version="1.0" encoding="utf-8"?>

<menu
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        tools:context=".WhatAndroid">

    <item
            android:id="@+id/action_logout"
            android:title="@string/logout"
            android:orderInCategory="90"
            app:showAsAction="never"/>

    <item
            android:id="@+id/action_feedback"
            android:title="@string/action_send_feedback"
            android:orderInCategory="95"
            app:showAsAction="never"/>

    <item
            android:id="@+id/action_settings"
            android:title="@string/action_settings"
            android:orderInCategory="100"
            app:showAsAction="never"/>

</menu>
