<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              xmlns:tools="http://schemas.android.com/tools"
              android:orientation="vertical"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:padding="16dp"
              tools:context="what.whatandroid.login.LoginFragment">

    <EditText
            android:id="@+id/username_input"
            android:layout_height="wrap_content"
            android:layout_width="fill_parent"
            android:inputType="textPersonName"
            android:hint="@string/username" >
            <requestFocus />
            </EditText>

    <EditText
            android:id="@+id/password_input"
            android:layout_height="wrap_content"
            android:layout_width="fill_parent"
            android:inputType="textPassword"
            android:hint="@string/password"/>

    <Button
            android:id="@+id/login_button"
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:text="@string/login"/>

</LinearLayout>