<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:orientation="vertical"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:paddingLeft="@dimen/activity_horizontal_margin"
              android:paddingRight="@dimen/activity_horizontal_margin"
              android:paddingTop="@dimen/activity_vertical_margin"
              android:paddingBottom="@dimen/activity_vertical_margin">

    <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

        <Button
                android:id="@+id/discard"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/discard"
                android:drawableLeft="@drawable/ic_action_cancel"
                android:layout_weight="1"
                android:layout_marginRight="8dp"/>

        <Button
                android:id="@+id/reply"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/reply"
                android:drawableRight="@drawable/ic_action_send_now"
                android:layout_weight="1"
                android:layout_marginLeft="8dp"/>

    </LinearLayout>

    <EditText
            android:id="@+id/post_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingTop="@dimen/activity_vertical_margin"
            android:inputType="textMultiLine"
            android:scrollbars="vertical"
            android:scrollHorizontally="false"
            android:hint="@string/compose_hint"/>

</LinearLayout>